# rust-inference-bench

./: .gitignore  Cargo.toml  GUIDE-cross-platform.md  README.md  REPORT.md  run.sh
crates/embed-burn/: Cargo.toml  build.rs
crates/embed-burn/src/: lib.rs
crates/embed-candle/: Cargo.toml
crates/embed-candle/src/: lib.rs
crates/embed-core/: Cargo.toml
crates/embed-core/src/: lib.rs
crates/embed-ort/: Cargo.toml
crates/embed-ort/examples/: ep_probe.rs
crates/embed-ort/src/: lib.rs
data/: corpus.sample.txt
results/: gpu-20260611T113701Z-Daeuns-MacBook-Pro.json  secondary-20260611T112025Z-Daeuns-MacBook-Pro.json
results/windows-x86_64-armv8-64-bit-family-8-model-1-revision-201-qualcomm-technologies-inc/: cpu-t1784326809-host.json  gpu-t1784330048-host.json  secondary-20260717T233751Z-hhandika-pc.json
runner/: Cargo.toml
runner/benches/: embedding.rs
runner/src/: main.rs
scripts/: fetch-model.sh  plot.py  secondary.sh
