[package]
name = "runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
embed-core.workspace = true
embed-candle.workspace = true
embed-burn.workspace = true
anyhow.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "embedding"
harness = false
