[package]
name = "runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
embed-core.workspace = true
embed-candle.workspace = true
embed-burn.workspace = true
embed-ort.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
gpu = ["embed-candle/metal", "embed-burn/wgpu", "embed-ort/coreml"]

# Cross-platform ORT execution-provider matrix (worklog 08). Run `bench ep` with
# one or more of these enabled; ort-cpu is always the baseline. Only ep-xnnpack
# / ep-coreml build on this Mac — the rest build on their target platform.
ep-xnnpack = ["embed-ort/xnnpack"]
ep-coreml = ["embed-ort/coreml"]
ep-directml = ["embed-ort/directml"]
ep-openvino = ["embed-ort/openvino"]
ep-cuda = ["embed-ort/cuda"]
ep-nnapi = ["embed-ort/nnapi"]

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "single_ort"
path = "src/bin/single_ort.rs"

[[bench]]
name = "embedding"
harness = false
