[package]
name = "embed-burn"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
embed-core.workspace = true
anyhow.workspace = true
# TODO(phase-0): add the real Burn stack to implement the forward pass:
#   burn (ndarray backend for desktop CPU), plus model import via burn-import
#   (ONNX) or a hand-built BERT; tokenizers for shared tokenization.
