[package]
name = "embed-candle"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
embed-core.workspace = true
anyhow.workspace = true
# TODO(phase-0): add the real Candle stack to implement the forward pass:
#   candle-core, candle-nn, candle-transformers (BERT), tokenizers, hf-hub
