[package]
name = "embed-candle"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
# Opt-in Intel MKL CPU BLAS on non-macOS boxes. Off by default so the crate
# builds on any machine with no system BLAS; run.sh `--blas mkl` turns it on.
# macOS always links Apple Accelerate via the target dependency below.
mkl = ["candle-core/mkl", "candle-nn/mkl"]

[dependencies]
embed-core.workspace = true
anyhow.workspace = true
candle-transformers = "0.9"
tokenizers = "0.21"
hf-hub = "0.4"
serde_json = "1"

# BLAS backend is chosen per-OS so `cargo build` works everywhere with no flags:
# macOS links Apple Accelerate; other platforms fall back to Candle's built-in
# kernels (enable `mkl` for Intel BLAS). Replaces the previous unconditional
# `accelerate` feature, which failed to build off macOS (worklog 12).
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9", features = ["accelerate"] }
candle-nn = { version = "0.9", features = ["accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.9" }
candle-nn = { version = "0.9" }
